增加样式处理

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
  * @Author: chenArno
  * @Date: 2020-05-22 14:43:14
  * @LastEditors: chenArno
- * @LastEditTime: 2020-05-22 14:43:34
+ * @LastEditTime: 2020-05-26 17:06:13
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -12,10 +12,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<!-- bower:css -->
+	<!-- endbower -->
 </head>
 
 <body>
 
+	<!-- bower:js -->
+	<!-- endbower -->
 </body>
 
 </html>
